--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,17 @@
     /* Set gray background color and 100% height */
     .sidenav {
       background-color: #f1f1f1;
-      height: 100%;
-    }
+      height: 100%
+;    }
     
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
       .sidenav {
         display: none;
+      }
+
+      .categories {
+        /*display: block !important;*/
       }
       .row.content {height: auto;} 
     }
