--- a/css/mobile.css
+++ b/css/mobile.css
@@ -113,12 +113,6 @@ div.mobilehome_scrollmenu a {
     text-align: right;
 }
 
-/*.mobile-right {
-	width: 65%;
-	float: right;
-	padding: 10px;
-}*/
-
 
 
 .mobile-auction-item {
@@ -211,6 +205,992 @@ line-height: 30px;
 display: block;
 }
 
+@media only screen and (max-width: 768px) {
+
+.single {
+
+padding: 30px 15px;
+margin-top: 40px;
+background: #ffffff;
+ }
+.single h3.side-title {
+margin: 0;
+margin-bottom: 10px;
+padding: 0;
+font-size: 20px;
+color: #333;
+text-transform: uppercase; }
+.single h3.side-title:after {
+content: '';
+width: 60px;
+height: 1px;
+background: #ff173c;
+display: block;
+margin-top: 6px; }
+
+.single ul {
+margin-bottom: 0; }
+.single li a {
+color: #666;
+font-size: 14px;
+text-transform: uppercase;
+border-bottom: 1px solid #f0f0f0;
+line-height: 40px;
+display: block;
+text-decoration: none; }
+.single li a:hover {
+color: #ff173c; }
+.single li:last-child a {
+border-bottom: 0; }
+
+
+/*Mobile slide*/
+   .slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.slider__slides {
+  position: relative;
+  width: 300%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1), -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  will-change: transform;
+}
+
+.slider__slide {
+  float: left;
+  width: 33.33333%;
+  height: 100%;
+}
+
+
+.slider__dots {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  bottom: 1.5em;
+  left: 50%;
+  top: 70px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+.slider__dot, .slider__indicator {
+  display: block;
+  margin: 0 0.5em;
+  width: 0.5em;
+  height: 0.5em;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 100px;
+}
+.slider__indicator {
+  position: absolute;
+  background: white;
+  /*width: auto;*/
+}
+.slider__indicator--left {
+  -webkit-transition: left 0.6s cubic-bezier(0.51, 0.92, 0.24, 1.15), right 0.6s 0.1s cubic-bezier(0.51, 0.92, 0.24, 1.15);
+  transition: left 0.6s cubic-bezier(0.51, 0.92, 0.24, 1.15), right 0.6s 0.1s cubic-bezier(0.51, 0.92, 0.24, 1.15);
+}
+.slider__indicator--right {
+  -webkit-transition: left 0.6s 0.1s cubic-bezier(0.51, 0.92, 0.24, 1.15), right 0.6s cubic-bezier(0.51, 0.92, 0.24, 1.15);
+  transition: left 0.6s 0.1s cubic-bezier(0.51, 0.92, 0.24, 1.15), right 0.6s cubic-bezier(0.51, 0.92, 0.24, 1.15);
+}
+
+.content[data-pos="0"] .slider__slides {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+.content[data-pos="1"] .slider__slides {
+  -webkit-transform: translateX(-33.33333%);
+          transform: translateX(-33.33333%);
+}
+.content[data-pos="2"] .slider__slides {
+  -webkit-transform: translateX(-66.66667%);
+          transform: translateX(-66.66667%);
+}
+
+.content[data-pos="0"] .slider__indicator {
+  left: 0em;
+  right: 4em;
+}
+.content[data-pos="1"] .slider__indicator {
+  left: 1.5em;
+  right: 2em;
+}
+.content[data-pos="2"] .slider__indicator {
+  left: 3em;
+  right: 0em;
+}
+
+.content[data-pos="0"] .slider__slide:nth-child(1) .picture span {
+  left: -160px;
+}
+.content[data-pos="1"] .slider__slide:nth-child(2) .picture span {
+  left: -140px;
+}
+.content[data-pos="2"] .slider__slide:nth-child(3) .picture span {
+  left: -85px;
+}
+
+.content[data-pos="0"] .slider__slide:nth-child(1) .buttons {
+  display: block;
+}
+.content[data-pos="1"] .slider__slide:nth-child(2) .buttons {
+  display: block;
+}
+.content[data-pos="2"] .slider__slide:nth-child(3) .buttons {
+  display: block;
+}
+
+.content[data-pos="0"] .slider__slide:nth-child(1) .dropdown {
+  display: block;
+}
+.content[data-pos="1"] .slider__slide:nth-child(2) .dropdown {
+  display: block;
+}
+.content[data-pos="2"] .slider__slide:nth-child(3) .dropdown {
+  display: block;
+}
+
+
+.content[data-pos="0"] > div {
+  background-color: rgba(255, 87, 34,.65);
+}
+.content[data-pos="1"] > div {
+  background-color: rgba(13,148,20,.4);
+}
+.content[data-pos="2"] > div {
+  background-color: rgba(209,27,27,.65);
+}
+
+
+
+.wrapper {
+  background-color: #f8f8f8;
+  display: flex;
+  z-index: 100000;
+  /*max-height: 736px;*/
+  /*height: 736px;*/
+  width: 100%;
+  margin: 10px auto;
+  /*border: solid 2px #aaa;*/
+  box-shadow: 0px 2px 15px #ddd;
+  border-radius: 3px;
+
+}
+
+/*Sidebar*/
+
+.sidebar {
+  max-height: 736px;
+  height: 736px;
+  width: 250px;
+  position: absolute;
+  padding: 0 10px;
+  display: none;
+  box-shadow: 0px 2px 15px #ddd;
+  border-radius: 9px;
+  z-index: 10000;
+  background: #f8f8f8;
+
+}
+
+.sidebar .brand {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 900;
+  font-size: 3.5em;
+  /*http://www.cssmatic.com/es/gradient-generator*/
+  background: linear-gradient(to right, 
+    rgba(209,27,27,1) 0%, 
+    rgba(209,27,27,1) 1%, 
+    rgba(248,80,50,1) 20%, 
+    rgba(13,148,20,1) 50%, 
+    rgba(230,202,60,1) 77%, 
+    rgba(230,143,12,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  position: absolute;
+  top: 10px;
+  left: 30px;
+}
+
+.sidebar .menu { 
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+}
+
+.sidebar .menu ul {
+  padding-left: 0;
+}
+
+.sidebar .menu .glyph-icon {
+  font-weight: 700;
+  margin-right: 20px;
+  vertical-align: middle;
+}
+
+.sidebar .menu .flaticon-mail {
+  font-weight: 400;
+}
+
+.sidebar ul li {
+  line-height: 3;
+  list-style: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.sidebar ul li a {
+
+  color: #777;
+  font-size: 14px !important;
+}
+
+
+
+.content {
+  flex: 1;
+  transform: translateX(0) scale(1);
+  animation: shrink-off .4s ease-out;
+  background: linear-gradient(to right, #666 0%, #FFEB3B 100%);
+  width: 100%;
+}
+
+.content.shrink {
+  box-shadow: -2px 2px 20px #ddd;
+  transform: translateX(250px) scale(.95);
+  animation: shrink-on .4s ease-out;
+}
+
+.content > div { 
+  position: relative;
+  transition: background-color 0.8s ease; 
+}
+
+.content #openMenu { 
+  cursor: pointer; 
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.content #openMenu > div { 
+  width: 20px; 
+  border: solid #fff 1px;
+  margin-bottom: 5px; 
+}
+
+.content #openMenu > div:nth-child(2) { width: 15px; }
+
+.content #shoppingIcon {
+  color: #fff;
+  position: absolute;
+  top: 10px;
+  right: -10px;
+  transform: rotateY(180deg);
+}
+
+
+
+.content .flaticon-cart:before { font-size: 24px }
+
+.content #shoppingIcon span {
+  color: #fff;
+  background-color: red;
+  padding: 1px 6px;
+  border-radius: 50px;
+  font-size: 12px;
+  font-weight: 600;
+  position: absolute;
+  left: 35px;
+  top: -4px;
+  transform: rotateY(180deg);
+}
+
+.content .header {
+  color: #fff;
+  height: 100px;
+  text-align: center;
+  padding-top: 5px;
+  letter-spacing: 1px;
+}
+
+.content .header h3 {
+  margin: 0;
+  margin-bottom: 3px;
+  font-weight: 100;
+}
+
+.content .triangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 100px 320px 0 0;
+  border-color: transparent #fff transparent transparent;
+  margin-top: -1px;
+}
+
+.content .product {
+  height: 448px;
+  width: 100%;
+  background-color: #fff;
+}
+
+.slider { position: absolute; top: 100px; height: 554px; }
+.picture { position: relative; margin: 0 15px; }
+.picture img { height: 362px; margin-left: 70px; position: relative; }
+.title { position: relative; color: #777; margin: 0 15px; }
+.title h3 { margin-bottom: 5px; font-family: 'Montserrat', sans-serif; letter-spacing: 1; }
+.title span { color: green; font-weight: bold; margin-right: 5px; }
+.description { color: #999; margin: 15px 15px; font-size: 14px; }
+.picture span { 
+  position: absolute;
+    top: 160px;
+    left: -20px;
+    font-size: 10em;
+    color: #ededed;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
+    letter-spacing: 4;
+    text-transform: uppercase;
+    transition: all .8s ease-in-out;
+}
+.buttons {
+  display: none;
+  position: absolute;
+    top: 70px;
+    right: 20px;
+    animation: scale-up .8s ease;
+}
+.buttons > div {
+  margin-bottom: 30px;
+    border: solid 2px #ddd;
+    padding: 10px 12px 10px 10px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.buttons > div:before { 
+  font-size: 25px;
+    font-weight: 600;
+    color: #888;
+    margin-left: 0;
+    transition: color .6s ease-out;
+}
+
+.buttons > div:nth-child(1).selected { border-color: #F44336; }
+.buttons > div:nth-child(1).selected:before { color: #F44336; }
+.buttons > div:nth-child(2).selected { border-color: #2196F3; }
+.buttons > div:nth-child(2).selected:before { color: #2196F3; }
+
+.content .price {
+  height: 80px;
+  width: 100%;
+  background-color: #fff;
+  border-top: solid #ddd 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content .price > div {
+  margin: 0 20px;
+}
+
+.content .price span {
+  font-size: 30px;
+  color: #00BC34;
+}
+
+.content .price a {
+  font-size: 20px;
+  background-color: #00BC34;
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 35px;
+  border-radius: 50px;
+}
+
+.content .price a:hover { background-color: #00a52e; }
+
+.no-animation {
+  animation: none !important;
+}
+
+@keyframes shrink-on {
+  0% {
+    transform: translateX(0) scale(1);
+  }
+  70% {
+    transform: translateX(250px) scale(.9);
+  }
+  100% {
+    transform: translateX(250px) scale(.95);
+  }
+}
+
+@keyframes shrink-off {
+  0% {
+    transform: translateX(250px) scale(.95);
+  }
+  70% {
+    transform: translateX(-10px) scale(1.05);
+  }
+  100% {
+    transform: translateX(0) scale(1);
+  }
+}
+
+@keyframes scale-up {
+  0% {
+    transform: scale(0);
+  }
+  70% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+.slider .dropdown { 
+  position: absolute; 
+  top: 0; 
+  right: 20px; 
+  font-family: "Montserrat", sans-serif; 
+  animation: scale-up .8s ease;
+}
+/** Dropdown **/
+.dropdown {
+  display: none;
+  position: relative;
+  color: #fff;
+  transform-style: preserve-3d;
+  perspective: 1500;
+}
+.dropdown.flip .front {
+  transform: rotateX(180deg);
+}
+.dropdown.flip .back {
+  transform: rotateX(0deg);
+}
+.dropdown .front,
+.dropdown .back {
+  transition: all 0.4s ease;
+}
+.dropdown .front {
+  height: 40px;
+  width: 90px;
+  backface-visibility: hidden;
+  cursor: pointer;
+  border: solid 2px #ddd;
+  border-radius: 50px;
+  line-height: 40px;
+  text-align: center;
+  color: #888;
+  margin-left: 5px;
+}
+.dropdown .front:after {
+  content: "";
+  position: relative;
+  top: 15px;
+  left: 4px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #888;
+}
+.dropdown .back {
+  transform: rotateX(180deg);
+  backface-visibility: hidden;
+}
+.dropdown ul {
+  position: absolute;
+  top: -120px;
+  z-index: 1;
+  width: calc(100% - 40px);
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
+  list-style: none;
+  border-radius: 3px;
+}
+.dropdown ul li {
+  color: #888;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.item_page_top_block {
+  border: none;
+}
+
+.mobile-pull-up {
+  margin-top: -100px; 
+}
+
+.mobile-clearfix {
+  clear: both;
+}
+
+.mobile-about-top-banner {
+  padding: 0 !important;
+}
+
+/*mobile footer*/
+/*
+link styling in main page
+*/
+
+/*
+header styling
+*/
+header {
+  max-width: 100%;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.code {
+  font-family: monospace;
+  background-color: black;
+  color: white;
+  display: block;
+  margin: auto;
+  width: 125px;
+  text-align: left;
+  padding: 0.5em;
+  /* line-height: 0.5em; */
+}
+.container {
+  width: 1000px;
+  max-width: 100%;
+  display: grid;
+  flex-wrap: wrap;
+  margin: auto;
+}
+.title h4 {
+  margin: 0;
+}
+h3 {
+  margin: 0;
+}
+.view img {
+  width: calc(100% - 2em);
+  box-shadow: 4px 4px 4px 4px #ccc;
+  margin: 1em;
+}
+.mobile.title {
+  margin-bottom: 0;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.mobile {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.tablet.title {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  margin-bottom: 0;
+}
+.tablet {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.laptop.title {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 5;
+  grid-row-end: 6;
+  margin-bottom: 0;
+}
+.laptop {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 6;
+  grid-row-end: 7;
+}
+
+/*
+footer styling
+*/
+hr {
+  height: 1px;
+  width: 100%;
+  border: 0;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  margin-bottom: 1em;
+}
+/*
+foot columns styling
+*/
+footer {
+  text-align: center;
+  font-size: 0.75em;
+  padding-top: 0;
+}
+.foot {
+  max-width: 100%;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 50% 50%;
+  margin-left: auto;
+  margin-right: auto;
+   width: 309px;
+  box-shadow: 4px 4px 4px 4px #ccc;
+}
+
+/*
+intro text styling
+*/
+/* row 1 */
+.foottext {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  margin: 1em;
+  margin-right: 0;
+}
+/* row 2 */
+/* My logo styling */
+.logo-foot {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.logo-foot img {
+  height: 3em;
+  padding-top: 0.4em;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+/* portfolio pop-up styling */
+.logo-title {
+  display: none;
+}
+.logo-title.open {
+  position: absolute;
+  display: block;
+  background-color: white;
+  font-size: 1em;
+  border: 1px solid black;
+  box-shadow: 1px 1px 1px 1px #ccc;
+}
+/*
+social logos styling
+*/
+.links {
+  margin: 1em;
+}
+.logo {
+  margin: auto;
+}
+/* row 3 */
+.pro.links {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+/* row 4 */
+.linked.in.logo img {
+  width: 3em;
+}
+.linked.in.logo {
+  margin-top: auto;
+  margin-bottom: auto;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.pph img {
+  height: 3em;
+}
+.pph {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+/* People per hour pop-up styling */
+.pph-title {
+  display: none;
+}
+.pph-title.open {
+  position: absolute;
+  display: block;
+  background-color: white;
+  font-size: 1em;
+  border: 1px solid black;
+  box-shadow: 1px 1px 1px 1px #ccc;
+}
+/* row 5 */
+.codepen.logo img {
+  height: 3em;
+}
+.codepen.logo {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+/* row 6 */
+.social.links {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 6;
+  grid-row-end: 7;
+}
+/* row 7 */
+.twitter.logo img {
+  width: 3em;
+}
+.twitter.logo {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 7;
+  grid-row-end: 8;
+}
+.fb.logo img {
+  width: 3em;
+}
+.fb.logo {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 7;
+  grid-row-end: 8;
+}
+/* row 8 */
+.society6.logo img {
+  height: 3em;
+}
+.society6.logo {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 8;
+  grid-row-end: 9;
+}
+/* responsive styles  */
+@media screen and (min-width:425px) and (max-width:549px){
+    .foot {
+      display: grid;
+      flex-wrap: wrap;
+      grid-template-columns: 20% 30% 30% 20%;
+      width: 400px;
+      max-width: 100%;
+    }
+    .foottext {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      text-align: right;
+    }
+    .logo-foot {
+      grid-column-start: 3;
+      grid-column-end: 5;
+      grid-row-start: 1;
+      grid-row-end: 2;
+      margin-left: 0.5em;
+    }
+    .pro.links {
+      grid-column-start: 1;
+      grid-column-end: 5;
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
+    .linked.in.logo {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 3;
+      grid-row-end: 4;
+    }
+    .pph {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 3;
+      grid-row-end: 4;
+    }
+    .codepen.logo {
+      grid-column-start: 3;
+      grid-column-end: 5;
+      grid-row-start: 3;
+      grid-row-end: 4;
+    }
+    .social.links {
+      grid-column-start: 1;
+      grid-column-end: 5;
+      grid-row-start: 4;
+      grid-row-end: 5;
+    }
+    .fb.logo {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 5;
+      grid-row-end: 6;
+    }
+    .twitter.logo {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 5;
+      grid-row-end: 6;
+    }
+    .society6.logo {
+      grid-column-start: 3;
+      grid-column-end: 5;
+      grid-row-start: 5;
+      grid-row-end: 6;
+    }
+}
+
+@media screen and (min-width:550px){
+  .container {
+    width: 1000px;
+    max-width: 100%;
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: 33% 33% 33%;
+    margin: auto;
+  }
+  /* .view img {
+    width: 100%;
+  } */
+  .mobile.title {
+    margin-bottom: 0;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .mobile {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .tablet {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .tablet.title {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .laptop {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .laptop.title {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .foot {
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: 45% 10% 10% 35%;
+    width: 600px;
+    max-width: 100%;
+  }
+  /* row 1 */
+  .foottext {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: right;
+  }
+  .logo-foot {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  /* row 2 */
+  .pro.links {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .pph {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .linked.in.logo {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .codepen.logo {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  /* row 3 */
+  .social.links {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  .fb.logo {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  .twitter.logo {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  .society6.logo {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+}
+@media screen and (min-width:1024px){
+  body {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .foot {
+    font-size: 1em;
+  }
+}
 
 
 }
