--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,8 +1,6 @@
-<link rel="stylesheet" type="text/css" href="css/footer.css">
-<div class="footer">
 <div class="content_wrapper">
 	<div id="page_footer">
-	<div class="footer-item">
+	<div class="footer-item col-md-3 col-sm-6 col-xs-12">
 	<div class="footer_top">
 		<ul style="width: 100%;border-right: 1px solid #ddd;">
 			<li class="header"><h2>Buying</h2></li>
@@ -21,7 +19,7 @@
 				</div>
 	</div>
 	
-		<div class="footer-item">
+		<div class="footer-item col-md-3 col-sm-6 col-xs-12">
 	<div class="footer_top">
 		<ul style="width: 100%;border-right: 1px solid #ddd;">
 			<li class="header"><h2>Selling</h2></li>
@@ -39,7 +37,7 @@
 			</div>
 		</div>
 
-			<div class="footer-item">
+			<div class="footer-item col-md-3 col-sm-6 col-xs-12">
 				<div class="footer_top">
 		<ul style="width: 100%;border-right: 1px solid #ddd;">
 			<li class="header"><h2>bidorbuy</h2></li>
@@ -60,7 +58,7 @@
 			</div>
 
 
-<div class="footer-item">
+<div class="footer-item col-md-3 col-sm-6 col-xs-12">
 	<div class="footer_top">
 		<ul style="width: 100%;border-right: 1px solid #ddd;">
 			<li class="header"><h2>Community</h2></li>
@@ -79,83 +77,17 @@
 	</div>
 	</div>
 	</div>
-</div>
-</div>
-<div class="clearfix"></div>
-	<div class="copyright">
-	<div class="content_wrapper">
-		<div style="padding-top: 10px; padding-bottom: 10px;">© 1999-2018 Auctionmail, All Rights Reserved</div>
-	</div>
-</div>
-</div>
 
- <script type="text/javascript">
+  <div class="space-clear-10"></div>
 
-  /** https://github.com/emoreno911/UI-to-Code/tree/master/juuce_app **/
-'use strict';
-
-var dots = 3;
-var contentElem = document.querySelector('.content');
-var dotElems = document.querySelectorAll('.slider__dot');
-var indicatorElem = document.querySelector('.slider__indicator');
-Array.prototype.forEach.call(dotElems, function (dotElem) {
-    dotElem.addEventListener('click', function (e) {
-        var currentPos = parseInt(contentElem.getAttribute('data-pos'));
-        var newPos = parseInt(dotElem.getAttribute('data-pos'));
-        var newDirection = newPos > currentPos ? 'right' : 'left';
-        var currentDirection = newPos < currentPos ? 'right' : 'left';
-        indicatorElem.classList.remove('slider__indicator--' + currentDirection);
-        indicatorElem.classList.add('slider__indicator--' + newDirection);
-        contentElem.setAttribute('data-pos', newPos);
-    });
-});
-
-// Hammer.js for touch gestures
-var hammertime = new Hammer(contentElem);
-
-// listen to touch events...
-hammertime.on("swipeleft swiperight", function(evt) {
-    var currentPos = parseInt(contentElem.getAttribute('data-pos')),
-        newPos;
-    
-    if(evt.type == 'swipeleft')
-        newPos = (currentPos + 1 > 2)? currentPos : currentPos + 1; 
-    else if (evt.type == 'swiperight')
-        newPos = (currentPos - 1 < 0)? currentPos : currentPos - 1;
-
-    if(newPos != currentPos) {
-        var newDirection = newPos > currentPos ? 'right' : 'left';
-        var currentDirection = newPos < currentPos ? 'right' : 'left';
-        indicatorElem.classList.remove('slider__indicator--' + currentDirection);
-        indicatorElem.classList.add('slider__indicator--' + newDirection);
-        contentElem.setAttribute('data-pos', newPos);
-    }
-});
-
-/** Events **/
-$('#openMenu').on('click', function(evt) {
-  $('.content')
-    .removeClass('no-animation') //disable initial animation
-    .toggleClass('shrink');
-
-    $('.sidebar').toggleClass('show');
-});
-
-$('.buttons > div').on('click', function(evt) {
-  $(this).toggleClass('selected');
-});
+  <div class="copyright">
+    <div style="padding-top: 10px; padding-bottom: 10px;">
+      © 1999-2018 Auctionmail, All Rights Reserved
+    </div>
+</div><!-- /.copyright -->
+</div><!-- /.content_wrapper -->
 
 
-$(".dropdown").on("click", function(){
-  $(this).toggleClass("flip");
-})
-
-$(".back ul li").on("click", function(){
-    var val = $(this).text();
-  $(this).closest('.dropdown').find('.front').text(val);
-});
-
-</script>
 
 
 
